fixed spacing

--- a/frontend/src/components/navigation.css
+++ b/frontend/src/components/navigation.css
@@ -25,8 +25,8 @@
 }
 
 .calendarOptions{
-    margin-top: 6em;
-    margin-bottom: 14em;
+    margin-top: 3em;
+    margin-bottom: 9em;
 }
 
 .topOptions{
@@ -40,8 +40,8 @@
 }
 
 .bottomOptions{
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 
